# core-platform

./: .argocd-source-yaml  .bazelignore  .bazelrc  .dockerignore  .env  .gitignore  BUILD.bazel  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.k6  MODULE.bazel  README.md  WORKSPACE  bazel  defs.bzl  docker-compose.yml  infra.env  intellij.bazelproject  pub-cert.pem  rust-project.json  rust-toolchain.toml  workspace.json
backend/gateway/graphql-bff/: BUILD.bazel  Cargo.toml  build.rs
backend/gateway/graphql-bff/src/: context.rs  main.rs  schema.rs
crates/account/: BUILD.bazel  Cargo.toml
crates/account-old/: Cargo.toml
crates/account-old/src/: lib.rs
crates/account-old/src/infrastructure/: mod.rs
crates/account-old/src/presentation/: mod.rs
crates/account-old/tests/entities/: account_test.rs  governance_test.rs  identity_test.rs  mod.rs  settings_test.rs
crates/account-old/tests/handlers/: activate.rs  add_push_token.rs  ban.rs  change_beta_tier.rs  change_birth_date.rs  change_email.rs  change_phone.rs  change_region.rs  change_role.rs  deactivate.rs  decrease_trust_score.rs  increase_trust_score.rs  lift_shadowban.rs  link_sub_identity.rs  register.rs  remove_push_token.rs  shadowban.rs  suspend.rs  unban.rs  unsuspend.rs  update_locale.rs  update_preferences.rs  update_timezone.rs  verify_email.rs  verify_phone.rs
crates/account-old/tests/repositories/: account.rs
crates/account-old/tests/types/: appearance_preferences.rs  birth_date.rs  locale.rs  mod.rs  notification_preferences.rs  privacy_preferences.rs
crates/account-test-utils/: Cargo.toml
crates/account-test-utils/src/: lib.rs  test_context_builder.rs
crates/account-test-utils/src/asserts/: account_assertions.rs  mod.rs
crates/account-test-utils/src/repositories/: account_stub.rs  global_registry_stub.rs  mod.rs  otp_verification_stub.rs
crates/account-test-utils/src/utils/: context.rs  context_builder.rs  fixture.rs  mod.rs
crates/account/migrations/: 202601020000_account.sql
crates/account/migrations/postgres/: 0001_account.sql  0002_global_registry.sql  202601020000_account.sql
crates/account/src/: bootstrap.rs  lib.rs
crates/account/src/application/: mod.rs
crates/account/src/domain/: mod.rs
crates/account/src/infrastructure/: mod.rs
crates/account/src/test_utils/: mod.rs  test_context.rs  test_context_builder.rs
crates/account/tests/: account_repository_it.rs  integration_tests.rs  lib.rs
crates/account/tests/common/: mod.rs  setup_postgres_test_db.rs
crates/account/tests/entities/: account_test.rs  governance_test.rs  identity_test.rs  settings_test.rs
crates/account/tests/handlers/: activate.rs  add_push_token.rs  ban.rs  change_beta_tier.rs  change_birth_date.rs  change_email.rs  change_phone.rs  change_phone_number.rs  change_region.rs  change_role.rs  deactivate.rs  decrease_trust_score.rs  increase_trust_score.rs  lift_shadowban.rs  link_sub_identity.rs  mod.rs  register.rs  remove_push_token.rs  shadowban.rs  suspend.rs  unban.rs  unsuspend.rs  update_locale.rs  update_preferences.rs  update_timezone.rs  verify_email.rs  verify_phone.rs
crates/account/tests/repositories/: account.rs  account_identity_repository_it.rs  account_metadata_repository_it.rs  account_repository_it.rs  account_settings_repository_it.rs  mod.rs
crates/account/tests/types/: appearance_preferences.rs  (+1 more)
crates/auth/: Cargo.toml
crates/auth-test-utils/: Cargo.toml
crates/auth-test-utils/src/: keycloak_test_context.rs  lib.rs  test_context.rs  validator_stub.rs
crates/auth/src/: lib.rs
crates/auth/tests/: auth_interceptor.rs  integration.rs  integration_tests.rs  interceptor.rs  validator.rs
crates/comment/: Cargo.toml
crates/comment/migrations/: 0001_init_comment_schema.cql
crates/comment/src/: lib.rs
crates/gamification/: BUILD.bazel  Cargo.toml
crates/gamification/migrations/: 202601030002_user_stats.sql
crates/geo-discovery/: Cargo.toml
crates/geo-discovery-test-utils/: Cargo.toml
crates/geo-discovery-test-utils/src/: lib.rs
crates/geo-discovery/src/: bootstrap.rs  lib.rs
crates/geo-discovery/tests/: lib.rs
crates/identity/: Cargo.toml
crates/identity/src/: errors.rs  lib.rs
crates/infra-fred/: Cargo.toml
crates/infra-fred/src/: lib.rs
crates/infra-kafka/: Cargo.toml
crates/infra-kafka/src/: consumer.rs  lib.rs  producer.rs
crates/infra-scylla/: Cargo.toml
crates/infra-scylla/src/: lib.rs
crates/infra-sqlx/: Cargo.toml
crates/infra-sqlx/src/: lib.rs
crates/infra-test/: Cargo.toml
crates/infra-test/src/: lib.rs  orchestrator.rs  test_context.rs  test_context_builder.rs
crates/post/: Cargo.toml
crates/post-old/: Cargo.toml
crates/post-old/src/: bootstrap.rs  lib.rs
crates/post-old/tests/: libs.rs
crates/post-test-utils/: Cargo.toml
crates/post-test-utils/src/: lib.rs
crates/post/assembly/: Cargo.toml
crates/post/audio/: Cargo.toml
crates/post/core/: Cargo.toml
crates/post/profile/: Cargo.toml
crates/post/proto-bridge/: Cargo.toml  build.rs
crates/post/src/: bootstrap.rs  lib.rs
crates/post/utils/: Cargo.toml
crates/profile/: BUILD.bazel  Cargo.toml  build.rs
crates/profile-test-utils/: Cargo.toml
crates/profile-test-utils/src/: lib.rs  test_context_builder.rs
crates/profile/migrations/: 202601030000_profile.sql  202601030000_profile_stats.cql
crates/profile/src/: bootstrap.rs  lib.rs
crates/profile/tests/: account_repository_it.rs  integration_tests.rs  profile_repository_it.rs
crates/shared-kernel/: BUILD.bazel  Cargo.toml  build.rs
crates/shared-kernel/data/: country_codes.txt
crates/shared-kernel/migrations/: 202601010000_foundation.sql
crates/shared-kernel/src/: lib.rs
crates/shared-kernel/tests/: processor_test.rs
crates/social/: Cargo.toml
crates/social-test-utils/: Cargo.toml
crates/social-test-utils/src/: fixture.rs  lib.rs  test_context_builder.rs
crates/social/src/: bootstrap.rs  lib.rs
crates/social/tests/: lib.rs  redis_counter_repository_it.rs  scylla_counter_repository_it.rs  scylla_relation_repository_it.rs
infrastructure/bazel/: BUILD.bazel
(+4799 files in other folders)
