# Cargo.toml

[workspace]
members = [
    "backend/services/account/api/command-server",
    "backend/services/account/workers/outbox-producer",
    "backend/services/account/workers/cache-invalidator",
    "backend/services/account/workers/janitor",
    "backend/services/profile/workers/outbox-producer",
    "backend/services/profile/workers/cache-invalidator",
    "backend/services/profile/workers/events-consumer",
    "backend/services/profile/api/command-server",
    "backend/services/social/api/command-server",
    "backend/services/post/api/command-server",
    "backend/services/geo-discovery/api/server",
    "common/rust/shared-proto",
    "crates/account",
    "crates/auth",
    "crates/profile",
    "crates/shared-kernel",
    "crates/gamification",
    "crates/social",
    # "backend/gateway/graphql-bff",
    "crates/infra-sqlx",
    "crates/infra-fred",
    "crates/infra-scylla",
    "crates/infra-kafka",
    "crates/infra-test",
    "crates/account-test-utils",
    "crates/profile-test-utils",
    "crates/social-test-utils",
    "crates/auth-test-utils",
    "crates/post",
    "crates/post-test-utils",
    "crates/shared-kernel-test-utils",
    "crates/geo-discovery",
    "crates/geo-discovery-test-utils",
    # "crates/comment",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Wynn <wynn.cn666@gmail.com>"]
repository = "https://github.com/ton-repo/projet"
description = "core-platform repo"

[workspace.dependencies]
account-test-utils = { path = "crates/account-test-utils" }
account = { path = "crates/account" }
shared-kernel = { path = "crates/shared-kernel" }
shared-kernel-test-utils = { path = "crates/shared-kernel-test-utils" }
shared-proto = { path = "common/rust/shared-proto" }
social = { path = "crates/social" }
social-test-utils = { path = "crates/social-test-utils" }
profile = { path = "crates/profile" }
profile-test-utils = { path = "crates/profile-test-utils" }
post = { path = "crates/post" }
post-test-utils = { path = "crates/post-test-utils" }
geo-discovery = { path = "crates/geo-discovery" }
geo-discovery-test-utils = { path = "crates/geo-discovery-test-utils" }
auth = { path = "crates/auth" }
auth-test-utils = { path = "crates/auth-test-utils" }
infra-sqlx = { path = "crates/infra-sqlx" }
infra-scylla = { path = "crates/infra-scylla" }
infra-fred = { path = "crates/infra-fred" }
infra-kafka = { path = "crates/infra-kafka" }
infra-test = { path = "crates/infra-test" }


# Communs
tokio = { version = "1.40", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "net",
    "signal",
] }
tokio-util = { version = "0.7.18" }
tokio-stream = { version = "0.1", features = ["net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10.4"
uuid = { version = "1.19", features = ["v7", "serde"] }
async-trait = "0.1.89"
thiserror = "2.0.17"
anyhow = "1.0"
futures = "0.3.31"
futures-util = "0.3"
rand = "0.9.2"
url = "2.5.7"
dyn-clone = "1.0.17"
dotenvy = "0.15.7"
sha2 = "0.11.0"

# Observabilité
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Infrastructure
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate",
    "ipnetwork",
] }
fred = { version = "10.1.0", features = ["serde-json", "dynamic-pool"] }
rdkafka = "0.38.0"
dashmap = "7.0.0-rc2"
elasticsearch = "9.1.0-alpha.1"
scylla = "1.4.1"
scylla-macros = "1.4.1"
once_cell = "1.21.3"

# Utils
regex = { version = "1.12", features = ["unicode", "unicode-perl"] }
seahash = "4.1"
unicode-normalization = { version = "0.1", features = ["std"] }
idna = "1.1.0"
openssl = "0.10"
base64 = "0.22.1"
phf = "0.13"
phf_codegen = "0.13"

# Proto / gRPC
tonic-health = "0.14.3"
tonic = { version = "0.14.2", features = [
    "codegen",
    "transport",
    "tls-webpki-roots",
] }
tonic-prost = "0.14.2"
tonic-build = "0.14.2"
tonic-reflection = "0.14.3"
tonic-prost-build = "0.14.2"
prost = "0.14.3"
prost-types = "0.14.3"

# Graphql
tower-http = { version = "=0.5.2", features = ["cors", "trace"] }
async-graphql = { version = "8.0.0-rc.1", features = [
    "dataloader",
    "dynamic-schema",
    "tracing",
    "uuid",
    "chrono",
] }
async-graphql-axum = "8.0.0-rc.1"
axum = "0.8.8"

# Http
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"] }

# Tests
testcontainers = "0.26"
testcontainers-modules = { version = "0.14" }
