# Cargo.toml

[workspace]
members = [
    "crates/shared/error",
    "crates/shared/resilience",
    "crates/shared/resilience-config",
    "crates/shared/telemetry",
    "crates/shared/transport",
    "crates/shared/cqrs",
    "crates/shared/storage/postgres",
    "crates/shared/storage/scylla",
    "crates/shared/storage/redis",
    "crates/shared/auth-context",
    "crates/shared/validate-core",
    "crates/shared/validation",
    "crates/shared/test-support",
    "crates/services/account",
    "crates/services/profile",
    "crates/services/social-graph",
    "crates/services/post",
    "crates/services/engagement",
    "crates/services/comment",
    "crates/services/geo-discovery",
    "crates/services/notification",
    "crates/services/timeline",
    "crates/services/chat",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Wynn <wynn.cn666@gmail.com>"]
repository = "https://github.com/ton-repo/projet"
description = "core-platform repo"

[workspace.dependencies]
# ── Internal shared crates ────────────────────────────────────────────────────
# Single source of truth for every intra-workspace path. Member crates reference
# these with `{ workspace = true }` so paths live in exactly one place.
# NB: the `postgres` crate is exposed under the `postgres-storage` key (via
# `package`) to avoid colliding with the crates.io `postgres` crate and to keep
# the naming symmetric with `scylla-storage` / `redis-storage`.
error             = { path = "crates/shared/error" }
resilience        = { path = "crates/shared/resilience" }
resilience-config = { path = "crates/shared/resilience-config" }
telemetry        = { path = "crates/shared/telemetry" }
transport        = { path = "crates/shared/transport" }
cqrs             = { path = "crates/shared/cqrs" }
auth-context     = { path = "crates/shared/auth-context" }
validate-core    = { path = "crates/shared/validate-core" }
validation       = { path = "crates/shared/validation" }
postgres-storage = { path = "crates/shared/storage/postgres", package = "postgres" }
scylla-storage   = { path = "crates/shared/storage/scylla" }
redis-storage    = { path = "crates/shared/storage/redis" }
test-support     = { path = "crates/shared/test-support" }


# Communs
tokio = { version = "1.40", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "net",
    "signal",
] }
tokio-util = { version = "0.7.18" }
tokio-stream = { version = "0.1", features = ["net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10.4"
uuid = { version = "1.19", features = ["v5", "v7", "serde"] }
async-trait = "0.1.89"
thiserror = "2.0.17"
anyhow = "1.0"
futures = "0.3.31"
futures-util = "0.3"
rand = "0.9.2"
arc-swap = "1.7"
notify = "6.1"
toml = "0.8"
url = "2.5.7"
dyn-clone = "1.0.17"
dotenvy = "0.15.7"
sha2 = "0.11.0"

# Observabilité
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Infrastructure
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate",
    "ipnetwork",
] }
fred = { version = "10.1.0", features = ["serde-json", "dynamic-pool"] }
rdkafka = "0.38.0"
dashmap = "7.0.0-rc2"
elasticsearch = "9.1.0-alpha.1"
scylla = "1.4.1"
scylla-macros = "1.4.1"
once_cell = "1.21.3"

# Utils
regex = { version = "1.12", features = ["unicode", "unicode-perl"] }
seahash = "4.1"
unicode-normalization = { version = "0.1", features = ["std"] }
idna = "1.1.0"
openssl = "0.10"
base64 = "0.22.1"
phf = "0.13"
phf_codegen = "0.13"

# Proto / gRPC
tonic-health = "0.14.3"
tonic = { version = "0.14.2", features = [
    "codegen",
    "transport",
    "tls-webpki-roots",
] }
tonic-prost = "0.14.2"
tonic-build = "0.14.2"
tonic-reflection = "0.14.3"
tonic-prost-build = "0.14.2"
prost = "0.14.3"
prost-types = "0.14.3"
prost-build = "0.14.3"
pbjson = "0.9"
pbjson-types = "0.9"
pbjson-build = "0.9"


# Graphql
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "=0.5.2", features = ["cors", "trace"] }
async-graphql = { version = "8.0.0-rc.1", features = [
    "dataloader",
    "dynamic-schema",
    "tracing",
    "uuid",
    "chrono",
] }
async-graphql-axum = "8.0.0-rc.1"
axum = "0.8.8"

# Http
http = "1"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"] }

# Tests
testcontainers = "0.26"
testcontainers-modules = { version = "0.14" }
