# // MODULE.bazel

module(
    name = "core_platform",
    version = "0.1.0",
)

# --- 1. DÉPENDANCES FONDAMENTALES ---
bazel_dep(name = "rules_rust", version = "0.58.0")
bazel_dep(name = "rules_rust_prost", version = "0.58.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "29.1", repo_name = "com_google_protobuf")
bazel_dep(name = "platforms", version = "1.0.0")

# --- 2. TOOLCHAIN RUST ---
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    versions = ["1.92.0"],
    edition = "2024",
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

# --- 3. CONFIGURATION PROST & TONIC (gRPC) ---
# On enregistre toutes les toolchains fournies par rules_rust_prost
# Cela inclut la toolchain par défaut pour Prost
register_toolchains("@rules_rust_prost//:all")

# --- 4. GESTION DES DÉPENDANCES CARGO ---
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//crates/shared-kernel:Cargo.toml",
        "//crates/account:Cargo.toml",
        "//crates/profile:Cargo.toml",
        "//crates/gamification:Cargo.toml",
        "//backend/services/account/outbox-processor:Cargo.toml",
        "//backend/services/account/cache-invalidator:Cargo.toml",
        "//backend/services/profile/outbox-processor:Cargo.toml",
        "//backend/services/profile/cache-invalidator:Cargo.toml",
        "//backend/services/profile/query-server:Cargo.toml",
        "//backend/gateway/graphql-bff:Cargo.toml"
    ],
)
use_repo(crate, "crates")