[package]
name = "account-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
account-old = { workspace = true }
auth = { workspace = true }
auth-test-utils = { workspace = true }
infra-test = { workspace = true }
infra-sqlx = { workspace = true }
shared-proto = { workspace = true, features = ["account"] }
shared-kernel = { workspace = true }
shared-kernel-test-utils = { workspace = true }
async-trait = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
