# crates/account/Cargo.toml

[package]
name = "account"
version.workspace = true
edition.workspace = true

[features]
test-utils = []

[dependencies]
infra-sqlx = { workspace = true }
shared-kernel = { workspace = true, features = ["runtime"] }
shared-proto = { workspace = true }
auth = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
async-trait = { workspace = true }
regex = { workspace = true }
unicode-normalization = { workspace = true }
seahash = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
prost-types = { workspace = true }
tonic-prost = { workspace = true }
anyhow = { workspace = true }
tokio-stream = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "macros", "derive"] }

[dev-dependencies]
infra-test = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
