# crates/account/Cargo.toml

[package]
name = "account"
version.workspace = true
edition.workspace = true

[features]
test-utils = []

[dependencies]
infra-sqlx = { workspace = true }
shared-kernel = { workspace = true, features = ["runtime", "stub"] }
shared-proto = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
async-trait = { workspace = true }
tonic = { workspace = true }
prost-types = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "macros", "derive"] }

[dev-dependencies]
infra-test = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
