[package]
name = "auth-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
auth = { workspace = true }
shared-kernel = { workspace = true }
tokio = { workspace = true }
testcontainers = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
