[package]
name = "auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[features]
test-utils = ["testcontainers", "testcontainers-modules"]

[dependencies]
# --- Internes (via Workspace) ---
shared-kernel = { workspace = true, features = ["runtime", "test-utils"] }

# --- Communs (via Workspace) ---
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# --- Proto / gRPC (via Workspace) ---
reqwest = { workspace = true, features = ["json"] }
tonic = { workspace = true }
jsonwebtoken = { workspace = true }

# --- DÉPENDANCES OPTIONNELLES (uniquement pour les tests/outils) ---

testcontainers = { workspace = true, optional = true }
testcontainers-modules = { workspace = true, optional = true }


[dev-dependencies]
auth = { path = ".", features = ["test-utils"] }

tokio = { workspace = true }
openssl = { workspace = true }
base64 = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
