[package]
name = "auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
# --- Internes (via Workspace) ---
shared-kernel = { workspace = true, features = ["runtime"] }

# --- Communs (via Workspace) ---
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# --- Proto / gRPC (via Workspace) ---
reqwest = { workspace = true, features = ["json"] }
tonic = { workspace = true }
jsonwebtoken = { workspace = true }

[dev-dependencies]
infra-test = { workspace = true }
tokio = { workspace = true }
openssl = { workspace = true }
base64 = { workspace = true }