[package]
name = "auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
shared-kernel = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tonic = { workspace = true }
jsonwebtoken = { workspace = true }

[dev-dependencies]
auth-test-utils = { workspace = true }
tokio = { workspace = true }
openssl = { workspace = true }
base64 = { workspace = true }
