[package]
name = "geo-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
shared-kernel = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
infra-scylla = { workspace = true }
infra-fred = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
h3o = { version = "0.10.0", default-features = false }
