[package]
name = "geo-discovery-old"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
shared-kernel = { workspace = true }
shared-proto = { workspace = true, features = ["geo-discovery"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
infra-scylla = { workspace = true }
infra-fred = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
dashmap = { workspace = true }
prost = { workspace = true }
pbjson-types = { workspace = true }
h3o = { version = "0.10.0", default-features = false }

[dev-dependencies]
geo-discovery-test-utils = { workspace = true }
infra-test = { workspace = true }
