[package]
name = "identity-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Identity bounded context - domain, application and infrastructure"

[dependencies]
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }