[package]
name = "infra-kafka"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
shared-kernel = { workspace = true, features = ["runtime", "kafka"] }
rdkafka = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
serde_json = { workspace = true }
tracing = { workspace = true }
