[package]
name = "infra-scylla"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[features]
macros = ["dep:scylla-macros"]

[dependencies]
shared-kernel = { workspace = true }
scylla = { workspace = true }
scylla-macros = { workspace = true, optional = true }
