[package]
name = "infra-test"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
infra-sqlx = { workspace = true }
infra-scylla = { workspace = true }
infra-fred = { workspace = true }
infra-kafka = { workspace = true }
shared-kernel = { workspace = true, features = ["runtime"] }
auth = { workspace = true }

uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = [
    "postgres",
    "redis",
    "kafka",
] }
